update recipe and prevent zoom on mobile

--- a/index.css
+++ b/index.css
@@ -96,4 +96,5 @@ mark {
   border: none;
   box-shadow: 2px 2px 3px #0000004a;
   margin: 10px;
+  touch-action: manipulation;
 }
